# miimento-backend

./: .env.dev  main.py  pyproject.toml
app/: config.py  run.py
app/adapter/: aws_adapter.py  mongodb_adapter.py  tenant_adapter.py
app/asset/html/: forgot_password_email.html  signup_email.html  signup_success.html  subscription_reminder_email.html  user_email_verification.html
app/controller/tenant/: login_controller.py  signup_controller.py
app/core/: error_handler.py  response_handler.py
app/core/constants/: db_collections.py  email_templates.py  error_constants.py  generic_constants.py  resp_constants.py
app/model/tenant/: role_model.py  signup_model.py  user.py
app/routes/: __init__.py
app/routes/tenant/: __init__.py  login_route.py  signup_route.py
app/services/tenant/: login_services.py  signup_services.py
app/utils/: auth_utils.py  db_utils.py  email_utils.py  file_utils.py  jwt_utils.py  s3_utils.py  string_utils.py
