[project]
name = "miiment-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "boto3>=1.37.36",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "pymongo>=4.12.0",
    "requests>=2.32.3",
    "uvicorn>=0.34.1",
]
